Docs + Format action

--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -36,17 +36,41 @@
     - [x] GoDoc
 
 ## V1.1
-- [ ] Web
-    - [ ] Web-windowing
-        - [ ] Support for web using wasm
+- [ ] Renderer
+    - [ ] SetPixel
+    - [ ] LoadText and .Draw()
+    - [ ] Web
+        - [ ] Web-windowing
+            - [ ] Support for web using wasm
+        - [ ] Web-rendering
+            - [ ] Support for buildin graphics driver
+            - [ ] WebGL
+    - [ ] Desktop
+        - [ ] Move to OpenGL v3.3
 
-    - [ ] Web-rendering
-        - [ ] Support for buildin graphics driver
-        - [ ] WebGL
+- [ ] 2 Ring Rendering Driver
+    - [ ] Ring 1
+        - [ ] Wrapper around OpenGL C api
+        - [ ] Wrapper around WebGL JS api
+    - [ ] Ring 2
+        - [ ] API around OpenGL and WebGL
 
 - [ ] Input
     - [ ] Keyboard
     - [ ] Mouse
+
+- [ ] Website
+    - [ ] Docs
+        - [ ] Vuelto Docs
+            - [ ] Vuelto API
+            - [ ] How to use vuelto
+            - [ ] Vuelto's functionality
+        - [ ] Developer Docs
+            - [ ] Vuelto's 3 ring structure
+            - [ ] CONTRIBUTING.md
+    - [ ] Tutorials
+        - [ ] Examples
+        - [ ] Tutorials to build small games
 
 ## V1.2
 - [ ] Renderer
@@ -59,9 +83,18 @@
     - [ ] Usable with animations
 
 - [ ] Node system
+    - [ ] Movable nodes
+        - [ ] Custom physics option
+    - [ ] Static nodes
+        - [ ] Unmovable
+        - [ ] Just a basic image/shape
 
 - [ ] Animations
     - [ ] Using images
     - [ ] Using spritesheets
 
+- [ ] Custom color system
+    - [ ] Color struct
+    - [ ] NewColor function
+    - [ ] Predefined Color constants
 
