New changes hehe

--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -48,6 +48,22 @@
     - [ ] Desktop
         - [ ] Move to OpenGL v3.3
 
+- [x] Windowing
+    - [x] Platforms
+        - [x] Windowing for web
+        - [x] Windowing for desktop
+
+- [ ] Imaging
+    - [ ] Load images
+    - [ ] Process images (to string)
+
+    - [ ] Infrastucture for Images
+        - [ ] STB_image
+
+- [ ] Events
+    - [ ] Keyboard
+    - [ ] Mouse
+
 - [ ] 2 Ring Rendering Driver
     - [ ] Ring 1
         - [ ] Wrapper around OpenGL C api
@@ -55,9 +71,26 @@
     - [ ] Ring 2
         - [ ] API around OpenGL and WebGL
 
-- [ ] Input
-    - [ ] Keyboard
-    - [ ] Mouse
+- [x] 2 Ring Window Driver
+    - [x] Ring 1
+        - [x] Wrapper around GLFW
+        - [x] Wrapper around JS runtime
+    - [x] Ring 2
+        - [x] API around GLFW and JS windowing
+
+- [ ] 2 Ring Input Driver
+    - [ ] Ring 1
+        - [ ] Wrapper around GLFW
+        - [ ] Wrapper around JS events
+    - [ ] Ring 2
+        - [ ] API around GLFW and JS events
+
+- [ ] 2 Ring Image Driver
+    - [ ] Ring 1
+        - [ ] Wrapper around go's image package
+    - [ ] Ring 2
+        - [ ] API around it
+
 
 - [ ] Website
     - [ ] Docs
@@ -65,17 +98,16 @@
             - [ ] Vuelto API
             - [ ] How to use vuelto
             - [ ] Vuelto's functionality
-        - [ ] Developer Docs
-            - [ ] Vuelto's 3 ring structure
-            - [ ] CONTRIBUTING.md
+        - [x] Developer Docs
+            - [x] Vuelto's 3 ring structure
+            - [x] CONTRIBUTING.md
     - [ ] Tutorials
         - [ ] Examples
         - [ ] Tutorials to build small games
 
 ## V1.2
-- [ ] Renderer
-    - [ ] SetPixel
-    - [ ] LoadText and draw it
+- [ ] Image
+    - [ ] Manipulate images
 
 - [ ] Spritesheets
     - [ ] Using images
