Added blog part to the website

--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -58,7 +58,7 @@
     - [ ] Process images (to string)
 
     - [ ] Infrastucture for Images
-        - [ ] STB_image
+        - [ ] Possibly STB_image
 
 - [ ] Events
     - [ ] Keyboard
@@ -129,4 +129,3 @@
     - [ ] Color struct
     - [ ] NewColor function
     - [ ] Predefined Color constants
-
