Fixed up some things

--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -65,11 +65,11 @@
     - [ ] Mouse
 
 - [ ] 2 Ring Rendering Driver
-    - [ ] Ring 1
-        - [ ] Wrapper around OpenGL C api
-        - [ ] Wrapper around WebGL JS api
-    - [ ] Ring 2
-        - [ ] API around OpenGL and WebGL
+    - [x] Ring 1
+        - [x] Wrapper around OpenGL C api
+        - [x] Wrapper around WebGL JS api
+    - [x] Ring 2
+        - [x] API around OpenGL and WebGL
 
 - [x] 2 Ring Window Driver
     - [x] Ring 1
@@ -101,6 +101,7 @@
         - [x] Developer Docs
             - [x] Vuelto's 3 ring structure
             - [x] CONTRIBUTING.md
+            - [x] Code of Conduct
     - [ ] Tutorials
         - [ ] Examples
         - [ ] Tutorials to build small games
