fix a buncha typos and formatting issues

--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -1,132 +1,134 @@
 # 🛣️ Roadmap for V1
 
 ## V1
+
 - [x] Application
-    - [x] Window
-    - [x] Input
+  - [x] Window
+  - [x] Input
 
 - [x] Renderer
-    - [x] Custom OpenGL
-    - [x] Rects, linex, etc
-    - [x] Images
+  - [x] Custom OpenGL
+  - [x] Rects, linex, etc
+  - [x] Images
 
 - [x] Shapes
-    - [x] Rects
-    - [x] Lines
+  - [x] Rects
+  - [x] Lines
 
 - [x] Audio
-    - [x] Sound
-    - [x] Music
+  - [x] Sound
+  - [x] Music
 
 - [x] Math
-    - [x] Vector2D
-    - [x] Vector3D
-    - [x] Add Together
-    - [x] Subtract
+  - [x] Vector2D
+  - [x] Vector3D
+  - [x] Add Together
+  - [x] Subtract
 
 - [x] Readme Improvements
-    - [x] Improve the about tab
-    - [x] Improve the text under the banner
+  - [x] Improve the about tab
+  - [x] Improve the text under the banner
 
 - [x] Installation.md
-    - [x] Update the requirements
-    - [x] Clean up old stuffm
+  - [x] Update the requirements
+  - [x] Clean up old stuff
 
 - [x] Docs
-    - [x] GoDoc
+  - [x] GoDoc
 
 ## V1.1
+
 - [ ] Renderer
-    - [ ] SetPixel
-    - [ ] LoadText and .Draw()
-    - [ ] Web
-        - [ ] Web-windowing
-            - [ ] Support for web using wasm
-        - [ ] Web-rendering
-            - [ ] Support for buildin graphics driver
-            - [ ] WebGL
-    - [ ] Desktop
-        - [ ] Move to OpenGL v3.3
+  - [ ] SetPixel
+  - [ ] LoadText and .Draw()
+  - [ ] Web
+    - [ ] Web-windowing
+      - [ ] Support for web using wasm
+    - [ ] Web-rendering
+      - [ ] Support for building graphics driver
+      - [ ] WebGL
+  - [ ] Desktop
+    - [ ] Move to OpenGL v3.3
 
 - [x] Windowing
-    - [x] Platforms
-        - [x] Windowing for web
-        - [x] Windowing for desktop
+  - [x] Platforms
+    - [x] Windowing for web
+    - [x] Windowing for desktop
 
 - [ ] Imaging
-    - [ ] Load images
-    - [ ] Process images (to string)
+  - [ ] Load images
+  - [ ] Process images (to string)
 
-    - [ ] Infrastucture for Images
-        - [ ] Possibly STB_image
+  - [ ] Infrastructure for Images
+    - [ ] Possibly STB_image
 
 - [ ] Events
-    - [ ] Keyboard
-    - [ ] Mouse
+  - [ ] Keyboard
+  - [ ] Mouse
 
 - [ ] 2 Ring Rendering Driver
-    - [x] Ring 1
-        - [x] Wrapper around OpenGL C api
-        - [x] Wrapper around WebGL JS api
-    - [x] Ring 2
-        - [x] API around OpenGL and WebGL
+  - [x] Ring 1
+    - [x] Wrapper around OpenGL C api
+    - [x] Wrapper around WebGL JS api
+  - [x] Ring 2
+    - [x] API around OpenGL and WebGL
 
 - [x] 2 Ring Window Driver
-    - [x] Ring 1
-        - [x] Wrapper around GLFW
-        - [x] Wrapper around JS runtime
-    - [x] Ring 2
-        - [x] API around GLFW and JS windowing
+  - [x] Ring 1
+    - [x] Wrapper around GLFW
+    - [x] Wrapper around JS runtime
+  - [x] Ring 2
+    - [x] API around GLFW and JS windowing
 
 - [ ] 2 Ring Input Driver
-    - [ ] Ring 1
-        - [ ] Wrapper around GLFW
-        - [ ] Wrapper around JS events
-    - [ ] Ring 2
-        - [ ] API around GLFW and JS events
+  - [ ] Ring 1
+    - [ ] Wrapper around GLFW
+    - [ ] Wrapper around JS events
+  - [ ] Ring 2
+    - [ ] API around GLFW and JS events
 
 - [ ] 2 Ring Image Driver
-    - [ ] Ring 1
-        - [ ] Wrapper around go's image package
-    - [ ] Ring 2
-        - [ ] API around it
-
+  - [ ] Ring 1
+    - [ ] Wrapper around go's image package
+  - [ ] Ring 2
+    - [ ] API around it
 
 - [ ] Website
-    - [ ] Docs
-        - [ ] Vuelto Docs
-            - [ ] Vuelto API
-            - [ ] How to use vuelto
-            - [ ] Vuelto's functionality
-        - [x] Developer Docs
-            - [x] Vuelto's 3 ring structure
-            - [x] CONTRIBUTING.md
-            - [x] Code of Conduct
-    - [ ] Tutorials
-        - [ ] Examples
-        - [ ] Tutorials to build small games
+  - [ ] Docs
+    - [ ] Vuelto Docs
+      - [ ] Vuelto API
+      - [ ] How to use vuelto
+      - [ ] Vuelto's functionality
+    - [x] Developer Docs
+      - [x] Vuelto's 3 ring structure
+      - [x] CONTRIBUTING.md
+      - [x] Code of Conduct
+  - [ ] Tutorials
+    - [ ] Examples
+    - [ ] Tutorials to build small games
 
 ## V1.2
+
 - [ ] Image
-    - [ ] Manipulate images
+  - [ ] Manipulate images
 
 - [ ] Spritesheets
-    - [ ] Using images
-    - [ ] returning images
-    - [ ] Usable with animations
+  - [ ] Using images
+  - [ ] returning images
+  - [ ] Usable with animations
 
 - [ ] Node system
-    - [ ] Movable nodes
-        - [ ] Custom physics option
-    - [ ] Static nodes
-        - [ ] Unmovable
-        - [ ] Just a basic image/shape
+  - [ ] Movable nodes
+    - [ ] Custom physics option
+  - [ ] Static nodes
+    - [ ] Unmovable
+    - [ ] Just a basic image/shape
 
 - [ ] Animations
-    - [ ] Using images
-    - [ ] Using spritesheets
+  - [ ] Using images
+  - [ ] Using spritesheets
 
 - [ ] Custom color system
-    - [ ] Color struct
-    - [ ] NewColor function
-    - [ ] Predefined Color constants
+  - [ ] Color struct
+  - [ ] NewColor function
+  - [ ] Predefined Color constants
