--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -54,6 +54,10 @@
   - [x] Platforms
     - [x] Windowing for web
     - [x] Windowing for desktop
+  - [ ] Framerates
+    - [ ] Set framerate
+    - [ ] Get framerate
+    - [ ] Deltatime
 
 - [ ] Imaging
   - [ ] Load images
@@ -66,7 +70,7 @@
   - [ ] Keyboard
   - [ ] Mouse
 
-- [ ] 2 Ring Rendering Driver
+- [x] 2 Ring Rendering Driver
   - [x] Ring 1
     - [x] Wrapper around OpenGL C api
     - [x] Wrapper around WebGL JS api
