Only a little left!

--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -41,14 +41,15 @@
 - [ ] Renderer
   - [ ] SetPixel
   - [ ] LoadText and .Draw()
-  - [ ] Web
-    - [ ] Web-windowing
-      - [ ] Support for web using wasm
-    - [ ] Web-rendering
-      - [ ] Support for building graphics driver
-      - [ ] WebGL
-  - [ ] Desktop
-    - [ ] Move to OpenGL v3.3
+  - [ ] Move the main API to the Rendering driver
+  - [x] Web
+    - [x] Web-windowing
+      - [x] Support for web using wasm
+    - [x] Web-rendering
+      - [x] Support for building graphics driver
+      - [x] WebGL
+  - [x] Desktop
+    - [x] Move to OpenGL v3.3
 
 - [x] Windowing
   - [x] Platforms
@@ -59,16 +60,13 @@
     - [ ] Get framerate
     - [ ] Deltatime
 
-- [ ] Imaging
-  - [ ] Load images
-  - [ ] Process images (to string)
+- [x] Imaging
+  - [x] Load images
+  - [x] Process images (to string)
 
-  - [ ] Infrastructure for Images
-    - [ ] Possibly STB_image
-
-- [ ] Events
-  - [ ] Keyboard
-  - [ ] Mouse
+- [x] Events
+  - [x] Keyboard
+  - [x] Mouse
 
 - [x] 2 Ring Rendering Driver
   - [x] Ring 1
@@ -84,18 +82,15 @@
   - [x] Ring 2
     - [x] API around GLFW and JS windowing
 
-- [ ] 2 Ring Input Driver
-  - [ ] Ring 1
-    - [ ] Wrapper around GLFW
-    - [ ] Wrapper around JS events
-  - [ ] Ring 2
-    - [ ] API around GLFW and JS events
+- [x] 2 Ring Input Driver
+  - [x] Ring 1 (No ring 1 needed)
+  - [x] Ring 2
+    - [x] API around GLFW and JS events
 
-- [ ] 2 Ring Image Driver
-  - [ ] Ring 1
-    - [ ] Wrapper around go's image package
-  - [ ] Ring 2
-    - [ ] API around it
+- [x] 2 Ring Image Driver
+  - [x] Ring 1 (No ring 1 needed)
+  - [x] Ring 2
+    - [x] API around Go image library
 
 - [ ] Website
   - [ ] Docs
