--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -3,131 +3,64 @@
 ## V1
 
 - [x] Application
-  - [x] Window
-  - [x] Input
+    - [x] Window
+    - [x] Input
 
 - [x] Renderer
-  - [x] Custom OpenGL
-  - [x] Rects, linex, etc
-  - [x] Images
+    - [x] Custom OpenGL
+    - [x] Rects, linex, etc
+    - [x] Images
 
 - [x] Shapes
-  - [x] Rects
-  - [x] Lines
+    - [x] Rects
+    - [x] Lines
 
 - [x] Audio
-  - [x] Sound
-  - [x] Music
+    - [x] Sound
+    - [x] Music
 
 - [x] Math
-  - [x] Vector2D
-  - [x] Vector3D
-  - [x] Add Together
-  - [x] Subtract
+    - [x] Vector2D
+    - [x] Vector3D
+    - [x] Add Together
+    - [x] Subtract
 
 - [x] Readme Improvements
-  - [x] Improve the about tab
-  - [x] Improve the text under the banner
+    - [x] Improve the about tab
+    - [x] Improve the text under the banner
 
 - [x] Installation.md
-  - [x] Update the requirements
-  - [x] Clean up old stuff
+    - [x] Update the requirements
+    - [x] Clean up old stuff
 
 - [x] Docs
-  - [x] GoDoc
+    - [x] GoDoc
 
 ## V1.1
-
-- [ ] Renderer
-  - [ ] SetPixel
-  - [ ] LoadText and .Draw()
-  - [ ] Move the main API to the Rendering driver
-  - [x] Web
-    - [x] Web-windowing
-      - [x] Support for web using wasm
-    - [x] Web-rendering
-      - [x] Support for building graphics driver
-      - [x] WebGL
-  - [x] Desktop
-    - [x] Move to OpenGL v3.3
-
-- [x] Windowing
-  - [x] Platforms
-    - [x] Windowing for web
-    - [x] Windowing for desktop
-  - [ ] Framerates
-    - [ ] Set framerate
-    - [ ] Get framerate
-    - [ ] Deltatime
-
-- [x] Imaging
-  - [x] Load images
-  - [x] Process images (to string)
-
-- [x] Events
-  - [x] Keyboard
-  - [x] Mouse
-
-- [x] 2 Ring Rendering Driver
-  - [x] Ring 1
-    - [x] Wrapper around OpenGL C api
-    - [x] Wrapper around WebGL JS api
-  - [x] Ring 2
-    - [x] API around OpenGL and WebGL
-
-- [x] 2 Ring Window Driver
-  - [x] Ring 1
-    - [x] Wrapper around GLFW
-    - [x] Wrapper around JS runtime
-  - [x] Ring 2
-    - [x] API around GLFW and JS windowing
-
-- [x] 2 Ring Input Driver
-  - [x] Ring 1 (No ring 1 needed)
-  - [x] Ring 2
-    - [x] API around GLFW and JS events
-
-- [x] 2 Ring Image Driver
-  - [x] Ring 1 (No ring 1 needed)
-  - [x] Ring 2
-    - [x] API around Go image library
-
-- [ ] Website
-  - [ ] Docs
-    - [ ] Vuelto Docs
-      - [ ] Vuelto API
-      - [ ] How to use vuelto
-      - [ ] Vuelto's functionality
-    - [x] Developer Docs
-      - [x] Vuelto's 3 ring structure
-      - [x] CONTRIBUTING.md
-      - [x] Code of Conduct
-  - [ ] Tutorials
-    - [ ] Examples
-    - [ ] Tutorials to build small games
+In the upcomings page right now. See [here](https://vuelto.pp.ua/roadmap).
 
 ## V1.2
 
 - [ ] Image
-  - [ ] Manipulate images
+    - [ ] Manipulate images
 
 - [ ] Spritesheets
-  - [ ] Using images
-  - [ ] returning images
-  - [ ] Usable with animations
+    - [ ] Using images
+    - [ ] returning images
+    - [ ] Usable with animations
 
 - [ ] Node system
-  - [ ] Movable nodes
-    - [ ] Custom physics option
-  - [ ] Static nodes
-    - [ ] Unmovable
-    - [ ] Just a basic image/shape
+    - [ ] Movable nodes
+        - [ ] Custom physics option
+    - [ ] Static nodes
+        - [ ] Unmovable
+        - [ ] Just a basic image/shape
 
 - [ ] Animations
-  - [ ] Using images
-  - [ ] Using spritesheets
+    - [ ] Using images
+    - [ ] Using spritesheets
 
 - [ ] Custom color system
-  - [ ] Color struct
-  - [ ] NewColor function
-  - [ ] Predefined Color constants
+    - [ ] Color struct
+    - [ ] NewColor function
+    - [ ] Predefined Color constants
