--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -37,7 +37,8 @@
     - [x] GoDoc
 
 ## V1.1
-In the upcomings page right now. See [here](https://vuelto.pp.ua/roadmap).
+
+Moved to the upcoming releases page. See [here](https://vuelto.pp.ua/roadmap).
 
 ## V1.2
 
