Few things left

--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -41,6 +41,9 @@
 Moved to the upcoming releases page. See [here](https://vuelto.pp.ua/roadmap).
 
 ## V1.2
+- [ ] Renderer
+    - [ ] SetPixel
+    - [ ] LoadText and .Draw()
 
 - [ ] Image
     - [ ] Manipulate images
