--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -8,7 +8,7 @@
 
 - [x] Renderer
     - [x] Custom OpenGL
-    - [x] Rects, linex, etc
+    - [x] Rects, lines, etc
     - [x] Images
 
 - [x] Shapes
