--- a/website/roadmap/v1.md
+++ b/website/roadmap/v1.md
@@ -39,10 +39,10 @@
 
 ## V1.1
 
-- [x] Framerates
+- [x] Framerate
     - [x] Set framerate
     - [x] Get framerate
-    - [x] Deltatime
+    - [x] DeltaTime
 
 - [x] Events
     - [x] Keyboard
